# xgboost-learning-lab

./: README.md
dev-xgboost-learning-py/: pyproject.toml  run.py
dev-xgboost-learning-py/resources/env/: env_dev.yaml  env_local.yaml
dev-xgboost-learning-py/resources/model/api/predict/: predict_request_data.json
dev-xgboost-learning-py/resources/model/api/training/: train-request-openapi.yaml  train-request-schema.json  train_request_data.json
dev-xgboost-learning-py/resources/model/ml/: xgb_model_20260223_175317.pkl
dev-xgboost-learning-py/src/api/: router.py
dev-xgboost-learning-py/src/api/controller/: xgboost_controller.py
dev-xgboost-learning-py/src/core/: enums.py
dev-xgboost-learning-py/src/core/env/: environment_config.py  settings_config.py
dev-xgboost-learning-py/src/core/exceptions/: handle_exception.py  predict_proba_exceptions.py  repository_exceptions.py  service_error.py  training_exceptions.py
dev-xgboost-learning-py/src/ml/xgb/builder/: preprocessor.py
dev-xgboost-learning-py/src/ml/xgb/dto/: metrics_dto.py  training_dto.py
dev-xgboost-learning-py/src/schemas/adapters/: builders.py  mappers.py
dev-xgboost-learning-py/src/schemas/common_ml/: feature_schema.py  repository_schema.py
dev-xgboost-learning-py/src/schemas/prediction_ml/: prediction_schema.py
dev-xgboost-learning-py/src/schemas/training_ml/: target_schema.py  training_schema.py
dev-xgboost-learning-py/src/services/: ml_service.py
dev-xgboost-learning-py/src/services/impl/: predict_service_impl.py  repository_service_impl.py  training_service_impl.py
(+3 files in other folders)
