[project]
name = "dev-xgboost-learning-py"
version = "0.1.0"
description = ""
authors = [
    {name = "ricardomarzochi07",email = "ricardomarzochi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "fastapi (>=0.128.2,<0.129.0)",
    "xgboost (>=3.1.3,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "joblib (>=1.5.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
